
                     ngIRCd - Next Generation IRC Server

                      (c)2001,2002 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

                  ngIRCd ist freie Software und steht unter
                       der GNU General Public License.

                        -- ChangeLog / Aenderungen --


ngIRCd 0.0.3, 16.01.2002

  - Server-Links vollstaendig implementiert: der ngIRCd kann nun auch
    "Sub-Server" haben, also sowohl als Leaf-Node als auch Hub in einem
    IRC-Netzwerk arbeiten.
  - MODE und NICK melden nun die Aenderungen an andere Server, ebenso
    die Befehle QUIT und SQUIT.
  - WHOIS wird nun immer an den "Original-Server" weitergeleitet.
  - Parses handhabt Leerzeichen zw. Parametern nun etwas "lockerer".
  - Status-Codes an den Server selber werden ignorier.
  - Log-Meldungen und Log-Level ueberarbeitet und korrigiert.
  - Kommandozeilen-Parser: Debug- und No-Daemon-Modus, Hilfe.
  - ngIRCd wandelt sich nun in einen Daemon (Hintergrundprozess) um.
  - WHOIS korrigiert: Anfrage wurde u.U. an User geforwarded anstatt vom
    Server beantwortet zu werden.
  - neue Befehle: LUSERS, LINKS
  - Client-Modes von Remote-Servern wurden nicht korrekt uerbernommen.

ngIRCd 0.0.2, 06.01.2002

  - Struktur der Konfigurationsdatei geaendert: sie ist nun "Samba like",
    d.h. sie besteht aus Abschnitten (siehe "doc/sample-ngircd.conf").
  - Es koennen mehrere IRC-Server-Opertatoren konfiguriert werden.
  - Zombies der Resolver-Prozesse werden nun ordentlich "getoetet".
  - NICK kann nun die Gross- und Kleinschreibung eines Nicks aendern.
  - ein Server-Passwort ist nun konfigurierbar.
  - neue Befehle: ERROR, SERVER, NJOIN (nur als "Fake"), SQUIT.
  - Asyncroner Resolver Hostname->IP implementiert.
  - Server-Links teilweise implementiert: bisher kann der ngIRCd jedoch
    nur "leafed server" sein, d.h. keine "Client-Server" haben. Einige
    Befehle sind auch noch nicht (optimal) angepasst: PRIVMSG funktioniert