@@ -10,6 +10,13 @@
                         -- ChangeLog / Aenderungen --
 
 
+ngIRCd 0.0.4, ??.??.????
+
+  - User-Modes bei User-Registrierungen von andere Servern (NICK-Befehl)
+    wurden falsch uebernommen. Zudem wurden die Modes falsch gekuerzt.
+  - Server-Verbindungen werden nun nach dem Start erst nach einer kurzen
+    Pause aufgebaut (zur Zeit drei Sekunden).
+
 ngIRCd 0.0.3, 16.01.2002
 
   - Server-Links vollstaendig implementiert: der ngIRCd kann nun auch
@@ -56,4 +63,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.9 2002/01/16 22:55:45 alex Exp $
+$Id: ChangeLog,v 1.10 2002/01/18 15:51:44 alex Exp $
